Added github link of project in footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,11 @@
 <footer class="footer bg-dark py-3 mt-auto">
   <div class="container text-center text-muted">
-    <span>Aryans's &copyCampGrounds 2020</span>
+    <span>Aryans's &copyCampGrounds 2021</span>
     <div>
-      <span>SourceCode @ <a href="">Github</a></span>
+      <span
+        >SourceCode @
+        <a href="https://github.com/Aryan271/Campgrounds">Github</a></span
+      >
     </div>
   </div>
 </footer>
